--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "test-temp-file"
 version = "0.1.0"
 authors = ["ohaddahan <ohaddahan@gmail.com>"]
 edition = "2018"
+repository = "https://github.com/ohaddahan/test-temp-file"
+license = "MIT OR Apache-2.0"
+description = "This crate allows creation and automatic deletion (based on Drop trait) of files"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
