--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ authors = ["ohaddahan <ohaddahan@gmail.com>"]
 edition = "2018"
 repository = "https://github.com/ohaddahan/test-temp-file"
 license = "MIT OR Apache-2.0"
+keywords = ["test", "tests", "testing", "file", "temp", "tmp"]
+categories = ["testing", "tests"]
 description = "This crate allows creation and automatic deletion (based on Drop trait) of files"
-include = ["README.md"]
+include = ["src/", "README.md"]
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
