--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["ohaddahan <ohaddahan@gmail.com>"]
 edition = "2018"
 repository = "https://github.com/ohaddahan/test-temp-file"
 license = "MIT OR Apache-2.0"
-keywords = ["test", "tests", "testing", "file", "temp", "tmp"]
+keywords = ["test", "tests", "testing", "temp", "tmp"]
 categories = ["testing", "tests"]
 description = "This crate allows creation and automatic deletion (based on Drop trait) of files"
 include = ["src/", "README.md"]
